--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "livewire/livewire": "^3.5",
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-image-optimizer": "^1.8",
+        "spatie/laravel-responsecache": "^7.6",
         "stevebauman/purify": "^6.2"
     },
     "require-dev": {
