--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
+    "@hotwired/turbo": "^8.0.12",
     "pace-js": "^1.2.4"
   },
   "name": "foodfusion",
